<resources>
    <string name="app_name">Travelite</string>
    <string name="res_hotel_start_txt1">Welcome! Thousands of tourists are\nwaiting to get your service</string>
    <string name="res_hotel_start_txt2">Do not have an account.\nRegister as hotel/restaurant owner</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="login_submit">Login</string>
    <string name="un">Username</string>
    <string name="pass">Password</string>
    <string name="re_pass">Retype Password</string>
    <string name="mobile">Phone No.</string>
    <string name="personal_email">Personal Email</string>
    <string name="select_re_hotel">Select Your Business Type</string>
    <string name="prof_name">Owner Name :</string>
    <string name="prof_email">Owner Email :</string>
    <string name="prof_phone">Owner Contact No. :</string>
    <string name="prof_loc">Business Location :</string>
    <string name="prof_joined">Joined Data :</string>
    <string name="prof_type">Business Type</string>
    <string name="prof_Business">Business Name</string>
    <string name="name_val">Sanjana Nilanka Perera</string>
    <string name="business_name_val">Tablo Hotel</string>
    <string name="pro_up">Update Profile</string>
    <string name="change_pass">Change Password</string>
    <string name="add_room">Add New Room</string>
    <string name="add_package">Add New Package</string>
    <string name="add_meals">Add New Meal</string>
    <string name="room_name">Room Name</string>
    <string name="room_price">Price</string>
    <string name="room_description">Description</string>
    <string name="room_Conditon">Select Room Conditons</string>
    <string name="for_person">Room for</string>
    <string name="payment_type">Payment Type</string>
    <string-array name="bussiness_type">
        <item>Restaurant</item>
        <item>Hotel</item>
    </string-array>
    <string-array name="star">
        <item>Not Rated</item>
        <item>★</item>
        <item>★★</item>
        <item>★★★</item>
        <item>★★★★</item>
        <item>★★★★★</item>
    </string-array>
    <string-array name="room_person_val">
        <item>Single Person</item>
        <item>Couple</item>
        <item>Family(3 - 4 Persons)</item>
        <item>Other</item>
    </string-array>
    <string-array name="room_pay_for">
        <item>Per Night</item>
        <item>Per Day</item>
        <item>Per Duration</item>
        <item>Other</item>
    </string-array>
    <string-array name="filter">
        <item>none</item>
        <item>5 star</item>
        <item>3 star</item>
        <item>2 star</item>
    </string-array>
    <string-array name="served_person">
        <item>1 Person</item>
        <item>2 Persons</item>
        <item>3 Persons</item>
        <item>4 Persons</item>
        <item>6 Persons</item>
        <item>10 Persons</item>
        <item>Other</item>
    </string-array>

    <string-array name="vehicle_type">
        <item>Car</item>
        <item>Van</item>
        <item>Tuk Tuk</item>
    </string-array>

    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>

    </string-array>
    <string name="Restaurant_home_text">You can attract customers\nby maintaining the restaurant profile properly.\nTherefore update your restaurant profile recently\nwith new meals, combo pack, and discounts</string>
    <string name="Hotel_home_text">You can attract customers\nby maintaining the hotel profile properly.\nTherefore update your hotel profile recently\nwith new rooms, meals, and packages</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>