<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:scaleType="centerInside"
            android:src="@drawable/travelite_logo" />
    </LinearLayout>

    <TextView
        android:id="@+id/welcomeResHotel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:text="@string/res_hotel_start_txt1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/resHotelLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="90dp"
        android:background="@drawable/round_corner"
        android:backgroundTint="@color/main_color"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/main_color" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/res_hotel_start_txt2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/resHotelLogin3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="90dp"
        android:background="@drawable/round_corner"
        android:backgroundTint="@color/main_color"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/main_color" />

</LinearLayout>