<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/popupContainer">
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:scaleType="centerInside"
                android:src="@drawable/travelite_logo" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="Welcome Back"
            android:textAlignment="center"
            android:textColor="@color/main_color"
            android:textSize="34sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="270dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="@drawable/styles_linear_layout">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:text="Enter UserName And Password"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/edtLoginUNorEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/styles_edit_text"
                android:ems="10"
                android:hint="@string/un"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColorHighlight="@color/main_color"
                android:textColorHint="@color/btnBackNav"
                android:textColorLink="@color/main_color" />

            <EditText
                android:id="@+id/edtLoginPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/styles_edit_text"
                android:ems="10"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColorHighlight="@color/main_color"
                android:textColorHint="@color/btnBackNav"
                android:textColorLink="@color/main_color" />

            <Button
                android:id="@+id/btnSubmitLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="80dp"
                android:background="@drawable/round_corner"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:backgroundTint="@color/main_color" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtViewLoginToReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Does Not Have Account? Register Here"
            android:textAlignment="center" />

    </LinearLayout>
</FrameLayout>